transport/api/src/snapshots/hopr_transport__stats__tests__peer_packet_stats_should_record_bidirectional_traffic.snap
---
source: transport/api/src/stats.rs
expression: snapshot
---
packetsOut: 2
packetsIn: 2
bytesOut: 3000
bytesIn: 2000
