transport/api/src/snapshots/hopr_transport__stats__tests__peer_packet_stats_should_record_incoming_packets.snap
---
source: transport/api/src/stats.rs
expression: snapshot
---
packetsOut: 0
packetsIn: 3
bytesOut: 0
bytesIn: 300
