transport/api/src/snapshots/hopr_transport__stats__tests__peer_packet_stats_should_record_outgoing_packets.snap
---
source: transport/api/src/stats.rs
expression: snapshot
---
packetsOut: 2
packetsIn: 0
bytesOut: 300
bytesIn: 0
