transport/api/src/snapshots/hopr_transport__stats__tests__peer_packet_stats_should_start_at_zero.snap
---
source: transport/api/src/stats.rs
expression: snapshot
---
packetsOut: 0
packetsIn: 0
bytesOut: 0
bytesIn: 0
